# hilt

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  electron-builder.json  electron-builder.yml  eslint.config.mjs  install.sh  next.config.ts  package-lock.json  package.json  plan.md  tsconfig.json  vitest.config.ts
.claude/: settings.json
.codex/: hooks.json
docs/: AGENT-NATIVE-PLAN.md  AGENT-NATIVE.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE-STACK-ARCHITECTURE.md  COMMAND-FEATURE-PLAN.md  COMPONENTS.md  Claude-Code-Integration-Analysis.md  DATA-MODELS.md  DESIGN-PHILOSOPHY.md  DEVELOPMENT.md  FIX-UNSAVED-CHANGES-PLAN.md  HOW-IT-WORKS.md  MARKDOWN.md  MEETING-LEDGER-RECOVERY.md  NAMING.md  Neighbors.md  PERFORMANCE-IMPLEMENTATION.md  PIPELINE-VERSIONS.md  Plan.md  RENAME-PLAN.md  RENAME-TO-BRIDGE-PLAN.md  SEMANTIC-VERSIONS.md  TAURI-MIGRATION-PLAN.md  TEST-ATTENTION-COLUMN.md  TODO-DEBT.md  Todo.md  VISION-TASK-CENTRIC.md  claude-stack-implementation-plan.md  claude-stack-viewer-plan.md  documentation-system-plan.md  draft-injection-test-plan.md  electron-dev-app-guide.md  eval-labels.md  folder-scoping-plan.md  macos-icon-generation.md  md-test.md  performance-baselines.md  performance-v2.md  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: dev.rs  folders.rs  inbox.rs  mod.rs  plans.rs  sessions.rs  shell.rs  terminal.rs
src-tauri/src/services/: db.rs  dev_mode.rs  file_watcher.rs  mod.rs  pty.rs  session_parser.rs  todo_md.rs
src-tauri/src/types/: inbox.rs  mod.rs  session.rs
(+959 files in other folders)
